force-app/main/default/objects/BLN_Payment__c/BLN_Payment__c.object-meta.xml
<CustomObject>
    <description>FOUK-4686: This object is created to store Payment information.</description>
    <label>Payments &amp; Refunds</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments &amp; Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>