force-app/main/default/objects/BLN_Payment__c/fields/BLN_AmountAlreadyRefunded__c.field-meta.xml
<CustomField>
    <fullName>BLN_AmountAlreadyRefunded__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK-5665: This field is created to store Amount Already Refunded value on payment record.</description>
    <label>Amount Already Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>