force-app/main/default/objects/BLN_Payment__c/fields/BLN_CardholderName__c.field-meta.xml
<CustomField>
    <fullName>BLN_CardholderName__c</fullName>
    <description>FOUK-6982 This is used in bln_PaymentScreenCmp</description>
    <label>Cardholder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>