force-app/main/default/objects/BLN_Payment__c/fields/BLN_CardNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_CardNumber__c</fullName>
    <description>FOUK-6361 This is used to get card number</description>
    <formula>TEXT(BLN_First6DigitsofCard__c) &amp; &apos;******&apos; &amp; BLN_Last4DigitsOfCard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Number</label>
    <type>Text</type>
</CustomField>