force-app/main/default/objects/BLN_Payment__c/fields/BLN_CardType__c.field-meta.xml
<CustomField>
    <fullName>BLN_CardType__c</fullName>
    <description>FOUK-5663, FOUK-5744 Determines the card type based on the first and last 6 digits of the card received in the payment gateway response. This info is needed to sync payments with EBS.</description>
    <label>Card Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>