force-app/main/default/objects/BLN_Payment__c/fields/BLN_Case__c.field-meta.xml
<CustomField>
    <fullName>BLN_Case__c</fullName>
    <description>FOUK-4686: This field is created to store case value.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>