force-app/main/default/objects/BLN_Payment__c/fields/BLN_challengereference__c.field-meta.xml
<CustomField>
    <fullName>BLN_challengereference__c</fullName>
    <label>Challengereference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>