force-app/main/default/objects/BLN_Payment__c/fields/BLN_Comment__c.field-meta.xml
<CustomField>
    <fullName>BLN_Comment__c</fullName>
    <description>FOUK-5730 This is used in Payment record page.</description>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>