force-app/main/default/objects/BLN_Payment__c/fields/BLN_ContactId__c.field-meta.xml
<CustomField>
    <fullName>BLN_ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-7411, Lookup to the ContactId of the PersonAccount that made the payment</description>
    <label>ContactId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments &amp; Refunds</relationshipLabel>
    <relationshipName>Payments_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>