force-app/main/default/objects/BLN_Payment__c/fields/BLN_CR__c.field-meta.xml
<CustomField>
    <fullName>BLN_CR__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class.</description>
    <externalId>true</externalId>
    <label>CR</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>