force-app/main/default/objects/BLN_Payment__c/fields/BLN_Currency__c.field-meta.xml
<CustomField>
    <fullName>BLN_Currency__c</fullName>
    <defaultValue>&apos;GBP&apos;</defaultValue>
    <description>FOUK-5663, FOUK-5744 Fixed value for UK</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>