force-app/main/default/objects/BLN_Payment__c/fields/BLN_EBSReturnCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_EBSReturnCode__c</fullName>
    <description>FOUK-7208 Stores the return message from Mulesoft after this payment record has been synced with EBS.</description>
    <label>EBS Return Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>