force-app/main/default/objects/BLN_Payment__c/fields/BLN_EBSReturnMsg__c.field-meta.xml
<CustomField>
    <fullName>BLN_EBSReturnMsg__c</fullName>
    <description>FOUK-7208 Stores the return message from MuleSoft after this payment record has been synced with EBS.</description>
    <label>EBS Return Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>