force-app/main/default/objects/BLN_Payment__c/fields/BLN_EventId__c.field-meta.xml
<CustomField>
    <fullName>BLN_EventId__c</fullName>
    <description>FOUK-Used to store the update events received from worldpay. History tracking will enable us to track the eventid of different events.</description>
    <label>Event Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>