force-app/main/default/objects/BLN_Payment__c/fields/BLN_First6DigitsofCard__c.field-meta.xml
<CustomField>
    <fullName>BLN_First6DigitsofCard__c</fullName>
    <description>FOUK-3977 This is used to store  Last 6 digits of the card used for payment.</description>
    <formula>VALUE(LEFT( BLN_PaymentId__c , 6))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First 6 Digits of Card Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>