force-app/main/default/objects/BLN_Payment__c/fields/BLN_InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>BLN_InitiatedBy__c</fullName>
    <description>FOUK-5664: This field is created to store Initiated By value on payment record.</description>
    <label>Initiated By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>