force-app/main/default/objects/BLN_Payment__c/fields/BLN_InitiatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_InitiatedDateTime__c</fullName>
    <description>FOUK-5611 This is used in Refund record page</description>
    <label>Initiated Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>