force-app/main/default/objects/BLN_Payment__c/fields/BLN_InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>BLN_InterfaceType__c</fullName>
    <description>FOUK-8400 To Store value Of Payment Interface Type</description>
    <label>Interface Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OLP</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>ECOM</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>