force-app/main/default/objects/BLN_Payment__c/fields/BLN_Last4DigitsOfCard__c.field-meta.xml
<CustomField>
    <fullName>BLN_Last4DigitsOfCard__c</fullName>
    <description>FOUK-3977. This field is created to store Last 4 Digits Card Used on Payment record.</description>
    <formula>RIGHT(BLN_PaymentId__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 4 Digits Card Used</label>
    <type>Text</type>
</CustomField>