force-app/main/default/objects/BLN_Payment__c/fields/BLN_LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyCreatedDate__c</fullName>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>