force-app/main/default/objects/BLN_Payment__c/fields/BLN_LegacyPaymentId__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyPaymentId__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Payment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>