force-app/main/default/objects/BLN_Payment__c/fields/BLN_LinkData__c.field-meta.xml
<CustomField>
    <fullName>BLN_LinkData__c</fullName>
    <description>FOUK-9249, stores the link data id from Worldpay</description>
    <label>Link Data</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>