force-app/main/default/objects/BLN_Payment__c/fields/BLN_MSTransactionId__c.field-meta.xml
<CustomField>
    <fullName>BLN_MSTransactionId__c</fullName>
    <description>FOUK-7208 MuleSoft generated transaction id that gets updated on the payment record after it has been synced with EBS. This is a unique Id.</description>
    <externalId>true</externalId>
    <label>MuleSoft Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>