force-app/main/default/objects/BLN_Payment__c/fields/BLN_OrgId__c.field-meta.xml
<CustomField>
    <fullName>BLN_OrgId__c</fullName>
    <defaultValue>&apos;84&apos;</defaultValue>
    <description>FOUK-5663, FOUK-5744 Fixed value for UK</description>
    <label>Organization Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>