force-app/main/default/objects/BLN_Payment__c/fields/BLN_OriginalPayment__c.field-meta.xml
<CustomField>
    <fullName>BLN_OriginalPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-4665, This Lookup FIeld is created for Payment &amp; Refunds Object</description>
    <label>Linked to Payment Record</label>
    <referenceTo>BLN_Payment__c</referenceTo>
    <relationshipLabel>Payments &amp; Refunds</relationshipLabel>
    <relationshipName>Payments_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>