force-app/main/default/objects/BLN_Payment__c/fields/BLN_PaymentAmountTaken__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentAmountTaken__c</fullName>
    <description>FOUK-4686: This field is created to store Payment amount taken value.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>