force-app/main/default/objects/BLN_Payment__c/fields/BLN_PaymentId__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentId__c</fullName>
    <description>FOUK-4686: This field is created to store Payment Id value.</description>
    <label>Token Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>