force-app/main/default/objects/BLN_Payment__c/fields/BLN_PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentStatus__c</fullName>
    <description>FOUK-4686: This field is created to store Payment status value.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>DECLINE</fullName>
            </value>
            <value>
                <fullName>INITIATED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>