force-app/main/default/objects/BLN_Payment__c/fields/BLN_PaymentTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentTime__c</fullName>
    <description>FOUK-4686: This field is created to store Payment time value.</description>
    <label>Payment Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>