force-app/main/default/objects/BLN_Payment__c/fields/BLN_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentType__c</fullName>
    <description>FOUK-4686: This field is created to store Payment type value.</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECOMMERCE</fullName>
            </value>
            <value>
                <fullName>CHIP &amp; PIN</fullName>
            </value>
            <value>
                <fullName>ONLINE PAYMENT</fullName>
            </value>
            <value>
                <fullName>BRANCH BANKING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>