force-app/main/default/objects/BLN_Payment__c/fields/BLN_PmtBatch__c.field-meta.xml
<CustomField>
    <fullName>BLN_PmtBatch__c</fullName>
    <description>FOUK-5663, FOUK-5744 Unique id generated</description>
    <label>Payment Batch Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>