force-app/main/default/objects/BLN_Payment__c/fields/BLN_PmtGatewayProvider__c.field-meta.xml
<CustomField>
    <fullName>BLN_PmtGatewayProvider__c</fullName>
    <description>FOUK-5663 and FOUK-5744 Capture the payment gateway provider, for automated and assisted payments, it is always Barclays. For any other payment channel, it is Worldpay</description>
    <label>Payment Gateway Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>WorldPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>