force-app/main/default/objects/BLN_Payment__c/fields/BLN_PmtReferenceId__c.field-meta.xml
<CustomField>
    <fullName>BLN_PmtReferenceId__c</fullName>
    <description>FOUK-9426 To Store Value of Payment Reference</description>
    <label>Payment Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>