force-app/main/default/objects/BLN_Payment__c/fields/BLN_PolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyHolder__c</fullName>
    <formula>BLN_Case__r.BLN_Corporate__r.BLN_PolicyHolderName__c</formula>
    <label>Policy Holder</label>
    <type>Text</type>
</CustomField>