force-app/main/default/objects/BLN_Payment__c/fields/BLN_RctMethod__c.field-meta.xml
<CustomField>
    <fullName>BLN_RctMethod__c</fullName>
    <description>FOUK-5663, FOUK-5744 Determined basis the Payment Type and Card Type mapping data and is needed for syncing with EBS.</description>
    <label>Receipt Method</label>
    <length>60</length>
    <type>Text</type>
</CustomField>