force-app/main/default/objects/BLN_Payment__c/fields/BLN_RctMethodId__c.field-meta.xml
<CustomField>
    <fullName>BLN_RctMethodId__c</fullName>
    <description>FOUK-5663, and FOUK-5744 Determined basis the Payment Type and Card Type mapping data and is needed for syncing with EBS.</description>
    <label>Receipt Method Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>