force-app/main/default/objects/BLN_Payment__c/fields/BLN_Reason__c.field-meta.xml
<CustomField>
    <fullName>BLN_Reason__c</fullName>
    <description>FOUK-5664: This field is created to store Reason on Payment record.</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Overpayment</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Paid in Error</fullName>
            </value>
            <value>
                <fullName>Scratched Glass</fullName>
            </value>
            <value>
                <fullName>Cancelled Job</fullName>
            </value>
            <value>
                <fullName>Staff Sale (Compliance Use Only )</fullName>
            </value>
            <value>
                <fullName>Compliance Issue (Compliance Use Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>