force-app/main/default/objects/BLN_Payment__c/fields/BLN_RefundCounter__c.field-meta.xml
<CustomField>
    <fullName>BLN_RefundCounter__c</fullName>
    <description>FOUK-5663, FOUK-5744 This field is created for Refund Counter</description>
    <label>Refund Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>