force-app/main/default/objects/BLN_Payment__c/fields/BLN_RefundFlag__c.field-meta.xml
<CustomField>
    <fullName>BLN_RefundFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-5665, This Field is created for storing information about Refund Flag</description>
    <label>Refund Flag</label>
    <type>Checkbox</type>
</CustomField>