force-app/main/default/objects/BLN_Payment__c/fields/BLN_RefundType__c.field-meta.xml
<CustomField>
    <fullName>BLN_RefundType__c</fullName>
    <description>FOUK-5663, FOUK-5744 Determines whether it was a full refund made or a partial refund based on the comparison of payment amount and the total amount refunded.</description>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>