force-app/main/default/objects/BLN_Payment__c/fields/BLN_RelatedComplaintCase__c.field-meta.xml
<CustomField>
    <fullName>BLN_RelatedComplaintCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-5730. Links the related Complaint type case to the waived receipt record.</description>
    <label>Related Complaint Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Not a valid Complaint Case.</errorMessage>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Feedback</value>
        </filterItems>
        <filterItems>
            <field>Case.BLN_SubType__c</field>
            <operation>equals</operation>
            <value>Complaint</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payments &amp; Refunds (Related Complaint Case)</relationshipLabel>
    <relationshipName>PaymentsRefunds</relationshipName>
    <type>Lookup</type>
</CustomField>