force-app/main/default/objects/BLN_Payment__c/fields/BLN_RemedyJobId__c.field-meta.xml
<CustomField>
    <fullName>BLN_RemedyJobId__c</fullName>
    <externalId>true</externalId>
    <label>Remedy Job Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>