force-app/main/default/objects/BLN_Payment__c/fields/BLN_SessionId__c.field-meta.xml
<CustomField>
    <fullName>BLN_SessionId__c</fullName>
    <description>FOUK-4540 - Created to store the session id associated with each payment attempt/record.</description>
    <label>Session Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>