force-app/main/default/objects/BLN_Payment__c/fields/BLN_Status__c.field-meta.xml
<CustomField>
    <fullName>BLN_Status__c</fullName>
    <description>FOUK-4686: This field is created to store Status value.</description>
    <label>Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>