force-app/main/default/objects/BLN_Payment__c/fields/BLN_SuccessFailureReason__c.field-meta.xml
<CustomField>
    <fullName>BLN_SuccessFailureReason__c</fullName>
    <description>FOUK-4686: This field is created to store case value.</description>
    <label>Status Reason</label>
    <length>60</length>
    <type>Text</type>
</CustomField>