force-app/main/default/objects/BLN_Payment__c/fields/BLN_TokenEBS__c.field-meta.xml
<CustomField>
    <fullName>BLN_TokenEBS__c</fullName>
    <description>FOUK-5744, FOUK-5663 Token Id returned from the EBS system once the payment record has been synced with it.</description>
    <formula>IF(RecordType.DeveloperName == &quot;BLN_Payments&quot;, &quot;BLN_PaymentId__c&quot;,
    IF(RecordType.DeveloperName == &quot;BLN_Refunds&quot;, &quot;BLN_PaymentId__c&quot; + &quot;R&quot; + TEXT(BLN_RefundCounter__c), &quot;&quot;)
)</formula>
    <label>Token EBS</label>
    <type>Text</type>
</CustomField>