force-app/main/default/objects/BLN_Payment__c/fields/BLN_TokenNumberEBS__c.field-meta.xml
<CustomField>
    <fullName>BLN_TokenNumberEBS__c</fullName>
    <description>Create Under FOUK-12008</description>
    <label>Token Number EBS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>