force-app/main/default/objects/BLN_Payment__c/fields/BLN_TxnId__c.field-meta.xml
<CustomField>
    <fullName>BLN_TxnId__c</fullName>
    <description>FOUK-5663, FOUK-5744 Case Number(Name)+&apos;04&apos; - This formula is used by default and is needed to sync data with EBS.</description>
    <label>Transaction ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>