force-app/main/default/objects/BLN_Payment__c/fields/BLN_WorldPay_Token__c.field-meta.xml
<CustomField>
    <fullName>BLN_WorldPay_Token__c</fullName>
    <description>FOUK-6343 - Created to store the token received from worldpay for a customer card</description>
    <label>WorldPay Token</label>
    <length>150</length>
    <type>Text</type>
</CustomField>