force-app/main/default/objects/BLN_Payment__c/recordTypes/BLN_Payments.recordType-meta.xml
<RecordType>
    <fullName>BLN_Payments</fullName>
    <active>true</active>
    <description>FOUK_5667, This Record Type is created for storing Payment related information</description>
    <label>Payments</label>
</RecordType>