force-app/main/default/objects/BLN_Payment__c/recordTypes/BLN_Refunds.recordType-meta.xml
<RecordType>
    <fullName>BLN_Refunds</fullName>
    <active>true</active>
    <description>FOUK_5667, This Record Type is created for storing Refund related information</description>
    <label>Refunds</label>
</RecordType>