force-app/main/default/objects/BLN_Payment__c/recordTypes/BLN_WaivedReceipts.recordType-meta.xml
<RecordType>
    <fullName>BLN_WaivedReceipts</fullName>
    <active>true</active>
    <description>FOUK_5667, This Record Type is created for storing Waived Receipts related information</description>
    <label>Waived Receipts</label>
</RecordType>