force-app/main/default/objects/BLN_Payment__c/recordTypes/Laddaw_Payment.recordType-meta.xml
<RecordType>
    <fullName>Laddaw_Payment</fullName>
    <active>true</active>
    <label>Laddaw Payment</label>
</RecordType>