force-app/main/default/objects/BLN_Payment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>BLN_PaymentStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>